--- a/Android/scenes/voice/voice/src/main/res/layout/voice_activity_chatroom.xml
+++ b/Android/scenes/voice/voice/src/main/res/layout/voice_activity_chatroom.xml
@@ -98,5 +98,17 @@
         android:layout_width="70dp"
         android:layout_height="wrap_content"/>
 
+    <Button
+        android:id="@+id/btnDebug"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:text="Debug"
+        android:textSize="@dimen/voice_sp_8"
+        android:visibility="visible"
+        android:textAllCaps="false"
+        android:background="@drawable/voice_corner_debug_button"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
