--- a/Android/scenes/ktv/src/main/res/layout/ktv_layout_lrc_active.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_layout_lrc_active.xml
@@ -31,9 +31,9 @@
         android:paddingTop="10dp"
         android:paddingEnd="10dp"
         android:paddingBottom="10dp"
-        app:currentTextColor="#FFE960"
+        app:currentHighlightedTextColor="#FFE960"
+        app:currentTextColor="@color/white"
         app:currentTextSize="18sp"
-        app:defaultTextColor="@color/white"
         app:defaultTextSize="16sp"
         app:labelWhenNoLyrics=" "
         app:layout_constraintBottom_toTopOf="@+id/bgd_control_layout_lrc"
