--- a/Android/scenes/show/src/main/res/layout/show_live_link_request_message_list.xml
+++ b/Android/scenes/show/src/main/res/layout/show_live_link_request_message_list.xml
@@ -32,22 +32,12 @@
         android:id="@+id/iBtnStopLinkText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="6dp"
+        android:layout_marginEnd="8dp"
         android:text="@string/show_stop_linking"
         android:textColor="@drawable/show_purple"
         android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="@id/textLinking"
-        app:layout_constraintEnd_toStartOf="@id/iBtnStopLink"
-        app:layout_constraintTop_toTopOf="@id/textLinking" />
-
-    <androidx.appcompat.widget.AppCompatImageButton
-        android:id="@+id/iBtnStopLink"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:background="@mipmap/show_stop_link_or_pk_btn"
-        android:src="@mipmap/show_stop_link_or_pk_btn"
-        android:visibility="gone"
+        android:drawablePadding="6dp"
+        android:drawableEnd="@mipmap/show_stop_link_or_pk_btn"
         app:layout_constraintBottom_toBottomOf="@id/textLinking"
         app:layout_constraintEnd_toEndOf="@id/textLinking"
         app:layout_constraintTop_toTopOf="@id/textLinking" />
