--- a/Android/scenes/show/src/main/res/layout/show_live_pk_request_message_list.xml
+++ b/Android/scenes/show/src/main/res/layout/show_live_pk_request_message_list.xml
@@ -31,25 +31,15 @@
         android:id="@+id/iBtnStopPKText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="6dp"
+        android:layout_marginEnd="8dp"
         android:text="@string/show_stop_pking"
         android:textColor="@drawable/show_purple"
         android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="@id/textPking"
-        app:layout_constraintEnd_toStartOf="@id/iBtnStopPK"
-        app:layout_constraintTop_toTopOf="@id/textPking" />
-
-    <androidx.appcompat.widget.AppCompatImageButton
-        android:id="@+id/iBtnStopPK"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:background="@mipmap/show_stop_link_or_pk_btn"
-        android:src="@mipmap/show_stop_link_or_pk_btn"
-        android:visibility="gone"
+        android:drawablePadding="6dp"
         app:layout_constraintBottom_toBottomOf="@id/textPking"
         app:layout_constraintEnd_toEndOf="@id/textPking"
-        app:layout_constraintTop_toTopOf="@id/textPking" />
+        app:layout_constraintTop_toTopOf="@id/textPking"
+        android:drawableEnd="@mipmap/show_stop_link_or_pk_btn" />
 
     <com.scwang.smart.refresh.layout.SmartRefreshLayout
         android:id="@+id/smart_refresh_layout"
